--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,7 +53,8 @@ spring:
     deserialization:
       FAIL_ON_UNKNOWN_PROPERTIES: false
       FAIL_ON_IGNORED_PROPERTIES: false
-
+  banner:
+    location: classpath:/custom-banner.txt
 # -------------------------------------------------------------------------------------------------
 # Custom  Tigergraph configurations
 # -------------------------------------------------------------------------------------------------
